--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
 
-  <body></body>
+  <body>
+    <header class="head">
+      <div class="nav">
+        <div class="img-div">
+          <h1>Anand Kumar</h1>
+        </div>
+        <div class="about-div">
+          <div class="about">
+
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
