i think nav section is completed

--- a/index.html
+++ b/index.html
@@ -5,17 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Homepage</title>
     <link href="styles.css" rel="stylesheet" />
+    <!-- Font Awesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
   </head>
 
   <body>
     <header class="head">
       <div class="nav">
         <div class="img-div">
-          <h1>Anand Kumar</h1>
+          <div class="wrapper">
+            <img src="./img/avatar-320.jpeg" alt="Profile Image">
+            <h1>Anand Kumar</h1>
+          </div>
         </div>
+
         <div class="about-div">
           <div class="about">
+            <p>About me</p>
+            <div class="content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque similique tenetur, laboriosam eveniet atque enim eligendi voluptatum accusantium, recusandae, laudantium officia deserunt. Amet, quia? Quia dolores veniam reprehenderit! Possimus, iste?
+              Id non cum consectetur iusto, consequatur eveniet dolore cumque fuga omnis excepturi in nobis dolor modi dignissimos quis! Debitis temporibus asperiores ad ducimus commodi sit possimus error suscipit nobis explicabo.
+            </div>
+          </div>
 
+          <div class="socials">
+            <i class="fab fa-linkedin fa-2x"></i>
+            <i class="fab fa-github fa-2x"></i>
+            <i class="fab fa-x-twitter fa-2x"></i>
           </div>
         </div>
       </div>
